neo4j/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo4j-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test.9-tails-fox.tech
    secretName: tls-secret
  rules:
  - host: test.9-tails-fox.tech
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            # name: my-neo4j-admin 
            name: temp-service
            port:
              # number: 7474
              number: 80
